// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMessageDialog renders hidden when open is false 1`] = `<div />`;

exports[`SendMessageDialog renders with all parameters 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-labelledby=":r5:"
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthLg MuiDialog-paperFullWidth css-cyxlny-MuiPaper-root-MuiDialog-paper"
        role="dialog"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root"
          id=":r5:"
        >
          Viestin lähettäminen
        </h2>
        <div
          class="MuiDialogContent-root css-ypiqx9-MuiDialogContent-root"
        >
          <div
            class="MuiStack-root css-1a3p8mp-MuiStack-root"
          >
            <div
              class="MuiBox-root css-126n10b"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root css-11lo9i1-MuiPaper-root-MuiAccordion-root"
              >
                <div
                  aria-expanded="false"
                  class="MuiButtonBase-root MuiAccordionSummary-root css-gqfqa5-MuiButtonBase-root-MuiAccordionSummary-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                  >
                    Vastaanottajat: 
                    2
                  </div>
                  <div
                    class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v84d5j-MuiSvgIcon-root"
                      data-testid="ArrowForwardIosSharpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiAccordion-region"
                        role="region"
                      >
                        <div
                          class="MuiAccordionDetails-root css-wzvdhu-MuiAccordionDetails-root"
                        >
                          <ul
                            class="MuiList-root MuiList-padding MuiList-dense css-duwaa2-MuiList-root"
                          >
                            <li
                              class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-zi7cm7-MuiListItem-root"
                            >
                              <div
                                class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
                              >
                                <span
                                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
                                >
                                  Dog Name 10
                                </span>
                                <p
                                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-83ijpv-MuiTypography-root"
                                >
                                  owner@exmaple.com, handler@exmaple.com
                                </p>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-zi7cm7-MuiListItem-root"
                            >
                              <div
                                class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
                              >
                                <span
                                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
                                >
                                  Dog Name 20
                                </span>
                                <p
                                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-83ijpv-MuiTypography-root"
                                >
                                  owner@exmaple.com, handler@exmaple.com
                                </p>
                              </div>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
              >
                Viesti
              </h6>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-6kvf19-MuiPaper-root"
              >
                <div
                  class="MuiAutocomplete-root MuiAutocomplete-fullWidth MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon css-1kkal6p-MuiAutocomplete-root"
                  data-testid="Viestin tyyppi"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1jy569b-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for=":r6:"
                      id=":r6:-label"
                    >
                      Viestin tyyppi
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                        id=":r6:"
                        role="combobox"
                        spellcheck="false"
                        type="text"
                        value="emailTemplate.registration"
                      />
                      <div
                        class="MuiAutocomplete-endAdornment css-p1olib-MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Clear"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-clearIndicator css-1glvl0p-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-clearIndicator"
                          tabindex="-1"
                          title="Clear"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                            data-testid="CloseIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="ArrowDropDownIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 10l5 5 5-5z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-14lo706"
                        >
                          <span>
                            Viestin tyyppi
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <fieldset
                  class="MuiFormControl-root css-mo77jt-MuiFormControl-root"
                >
                  <legend
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
                  >
                    Yhteystiedot:
                  </legend>
                  <div
                    class="MuiFormGroup-root css-182q4zi-MuiFormGroup-root"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="CheckBoxIcon"
                        focusable="false"
                        name="official"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                        />
                      </svg>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
                      >
                        event.official
                      </span>
                    </label>
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="CheckBoxIcon"
                        focusable="false"
                        name="secretary"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                        />
                      </svg>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
                      >
                        event.secretary
                      </span>
                    </label>
                  </div>
                </fieldset>
                <fieldset
                  class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                >
                  <legend
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
                  >
                    Voit lisätä tähän halutessasi lisäviestin:
                  </legend>
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-8ewcdo-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <textarea
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
                        id=":r8:"
                        rows="4"
                        style="height: 0px; overflow: hidden;"
                      />
                      <textarea
                        aria-hidden="true"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
                        readonly=""
                        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                        tabindex="-1"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-ihdtdm"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
            <div
              class="MuiBox-root css-a6rva7"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
              >
                Esikatselu
              </h6>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-rebil1-MuiPaper-root"
              >
                Aihe: 
                registration.email.subject: NOU 10.–11.2.2021 test location
                <div
                  class="preview"
                >
                  <h1>
                    registration.email.title
                  </h1>
                  

                  <p>
                    <br />
                    

                    <a
                      href="/r/test1/nou-registration/edit"
                    >
                      Muokkaa ilmoittautumisen tietoja
                    </a>
                    <br />
                    

                    <a
                      href="/r/test1/nou-registration/cancel"
                    >
                      Peru ilmoittautuminen
                    </a>
                    <br />
                    

                  </p>
                  

                  <table>
                    

                    <tbody>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Koe                
                        </th>
                        

                        <td>
                          NOU 10.–11.2.2021 test location (test)
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        />
                        

                        <td />
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Koira              
                        </th>
                        

                        <td>
                          TESTDOG-0010 Dog Name 10
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Tunnistusmerkintä  
                        </th>
                        

                        <td>
                          1234567890123456
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Rotu               
                        </th>
                        

                        <td>
                          breed:110
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Omistaja           
                        </th>
                        

                        <td>
                          Owner Name
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Kotipaikka         
                        </th>
                        

                        <td>
                          Owner Location
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Sähköposti         
                        </th>
                        

                        <td>
                          owner@exmaple.com
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Ohjaaja            
                        </th>
                        

                        <td>
                          Handler Name
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Kotipaikka         
                        </th>
                        

                        <td>
                          Handler Location
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Sähköposti         
                        </th>
                        

                        <td>
                          handler@exmaple.com
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Puhelin            
                        </th>
                        

                        <td>
                          +3584054321
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Toivottu ajankohta 
                        </th>
                        

                        <td>
                          dd.MM. registration.time.ap
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Varasija           
                        </th>
                        

                        <td>
                          registration.reserveChoises.ANY
                        </td>
                        

                      </tr>
                      

                    </tbody>
                    

                  </table>
                  

                  <p>
                    <strong>
                      Koeluokkaan oikeuttavat tulokset
                    </strong>
                    <br />
                    

                    <br />
                    

                  </p>
                  

                  <p>
                    <strong>
                      Lisätietoja
                    </strong>
                    <br />
                    
additional notes
                    <br />
                    

                  </p>
                  

                  <p>
                    Voit tarkastella ilmoittautumisesi tietoja täällä: 
                    <a
                      href="/r/test1/nou-registration"
                    >
                      Katso ilmoittautumisen tiedot
                    </a>
                  </p>
                  

                  <p>
                    Ystävällisin terveisin,
                    <br />
                    

                    <br />
                    
Siiri Sihteeri
                    <br />
                    
Koesihteeri
                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    
p. 
                    <br />
                    

                  </p>
                  

                  <p>
                    <br />
                    
Teemu Toimitsija
                    <br />
                    
Vastaava koetoimitsija
                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    

                  </p>
                  

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing css-knqc4i-MuiDialogActions-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Lähetä
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            cancel
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`SendMessageDialog renders with minimal parameters 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-labelledby=":r1:"
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthLg MuiDialog-paperFullWidth css-cyxlny-MuiPaper-root-MuiDialog-paper"
        role="dialog"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-bdhsul-MuiTypography-root-MuiDialogTitle-root"
          id=":r1:"
        >
          Viestin lähettäminen
        </h2>
        <div
          class="MuiDialogContent-root css-ypiqx9-MuiDialogContent-root"
        >
          <div
            class="MuiStack-root css-1a3p8mp-MuiStack-root"
          >
            <div
              class="MuiBox-root css-126n10b"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root css-11lo9i1-MuiPaper-root-MuiAccordion-root"
              >
                <div
                  aria-expanded="false"
                  class="MuiButtonBase-root MuiAccordionSummary-root css-gqfqa5-MuiButtonBase-root-MuiAccordionSummary-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                  >
                    Vastaanottajat: 
                    0
                  </div>
                  <div
                    class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-v84d5j-MuiSvgIcon-root"
                      data-testid="ArrowForwardIosSharpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiAccordion-region"
                        role="region"
                      >
                        <div
                          class="MuiAccordionDetails-root css-wzvdhu-MuiAccordionDetails-root"
                        >
                          <ul
                            class="MuiList-root MuiList-padding MuiList-dense css-duwaa2-MuiList-root"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
              >
                Viesti
              </h6>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-6kvf19-MuiPaper-root"
              >
                <div
                  class="MuiAutocomplete-root MuiAutocomplete-fullWidth MuiAutocomplete-hasPopupIcon css-1kkal6p-MuiAutocomplete-root"
                  data-testid="Viestin tyyppi"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="false"
                      for=":r2:"
                      id=":r2:-label"
                    >
                      Viestin tyyppi
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                        id=":r2:"
                        role="combobox"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment css-p1olib-MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="ArrowDropDownIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 10l5 5 5-5z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-yjsfm1"
                        >
                          <span>
                            Viestin tyyppi
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <fieldset
                  class="MuiFormControl-root css-mo77jt-MuiFormControl-root"
                >
                  <legend
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
                  >
                    Yhteystiedot:
                  </legend>
                  <div
                    class="MuiFormGroup-root css-182q4zi-MuiFormGroup-root"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="CheckBoxIcon"
                        focusable="false"
                        name="official"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                        />
                      </svg>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
                      >
                        event.official
                      </span>
                    </label>
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="CheckBoxIcon"
                        focusable="false"
                        name="secretary"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                        />
                      </svg>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
                      >
                        event.secretary
                      </span>
                    </label>
                  </div>
                </fieldset>
                <fieldset
                  class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
                >
                  <legend
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
                  >
                    Voit lisätä tähän halutessasi lisäviestin:
                  </legend>
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-8ewcdo-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <textarea
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
                        id=":r4:"
                        rows="4"
                        style="height: 0px; overflow: hidden;"
                      />
                      <textarea
                        aria-hidden="true"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input"
                        readonly=""
                        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                        tabindex="-1"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-ihdtdm"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
            <div
              class="MuiBox-root css-a6rva7"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
              >
                Esikatselu
              </h6>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-rebil1-MuiPaper-root"
              >
                Aihe: 
                <div
                  class="preview"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing css-knqc4i-MuiDialogActions-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Lähetä
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            cancel
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
